Major Updates
Added bulk SMS and single sms features, weather and some bug fixes